devopsdaymvd-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: devopsdaymvd-service
spec:
  selector:
    app: devopsdaymvd
  ports:
   - port: 80
